--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite --open --host",
-    "build" : "vite build",
-    "preview" : "vite preview --open --host",
-    "deploy-main" : "surge ./dist mijnewebsitehehe.surge.sh",
-    "postdeploy-main" : "start chrome https://mijnewebsitehehe.surge.sh",
-    "deploy-develop" : "surge ./dist mijnewebsitehehe.surge.sh",
-    "postdeploy-develop" : "start chrome https://mijnewebsitehehe.surge.sh"
+    "build": "vite build",
+    "preview": "vite preview --open --host",
+    "deploy-main": "surge ./dist mijnewebsitehehe.surge.sh",
+    "postdeploy-main": "start chrome https://mijnewebsitehehe.surge.sh",
+    "deploy-develop": "surge ./dist mijnewebsitehehe.surge.sh",
+    "postdeploy-develop": "start chrome https://mijnewebsitehehe.surge.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "canvas-confetti": "^1.9.3"
+  }
 }
